Fixed vertical alignment of boxes, added explanation to index.html

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -7,7 +7,9 @@
 		rotation-point:50% 50%;
 		display:inline-block;
 		margin:10px;
+		vertical-align:top;
       }
+	  	  
 .mybox:hover {
 		animation-name: wobble;
 		animation-duration: 0.1s;
@@ -15,6 +17,27 @@
 		animation-iteration-count: 3;
 		animation-timing-function: linear;
       }
+	  
+.mybox2:hover {
+		animation-name: wobble;
+		animation-duration: 0.1s;
+		animation-direction: alternate;
+		animation-iteration-count: 3;
+		animation-timing-function: linear;
+      }
+	
+.mybox2 {
+        border: 20px solid blue;
+        background-color: #ccccff;
+        border-radius: 20px;
+        width:140px;
+        height: 140px;
+		rotation-point:50% 50%;
+		display:inline-block;
+		margin:10px;
+		
+      }
+	  
 @keyframes wobble {
 	    0% {transform:rotate(-2deg);}
 		50% {transform:rotate(0deg);}
@@ -23,7 +46,7 @@
 		/*to {background-color: yellow;}*/
 	  }
 	  
-#centercontent {
+.centercontent {
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
